# pico-minimal-build

./: CMakeLists.txt  README.md  main.c
src/: main.c
